[package]
name = "pv-inv-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.14.0", default-features = false, features = [
    "tcp",
] }
tokio-retry = "0.3"
edgedb-tokio = "0.5.1"
edgedb-protocol = "0.6.1"
edgedb-derive = "0.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
axum = { version = "^0.6", features = ["headers", "macros"] }
futures = "0.3"
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde = "1.0.210"
serde_json = "1.0.128"
reqwest = { version = "^0.11", features = ["json"] }
iso8601-duration = "0.2.0"
anyhow = "1.0.89"
tracing = { version = "0.1.40", features = ["valuable"] }
valuable = { version = "0.1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = [
    "chrono",
    "env-filter",
    "tracing",
    "valuable",
] }
robust-tokio-modbus = "0.1.0"
